[B]v1.1[/B]
- Thanks to misa2610 for correcting the typo's

[B]v1.0[/B]
- Clone of DSS