@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.nlsports" name="NL Sports" version="1.0.2" provider-name="XODI &amp; NLSPORTS">
+<addon id="plugin.video.nlsports" name="NL Sports" version="1.2.1" provider-name="XODI &amp; NLSPORTS">
 	<requires>
 		<import addon="plugin.video.veetle" version="0.3.1" optional="false"/>
 		<import addon="plugin.video.p2p-streams" version="1.1" optional="false"/>
@@ -10,8 +10,8 @@
 	<extension  point="xbmc.addon.metadata">
 		<platform>all</platform>
 		<summary lang="nl">Bekijk NL sport streams van diverse Nederlandse stream providers op uw XBMC / Kodi.</summary>
-		<description lang="nl">Met deze plugin is het mogelijk om streams van Nederlandse stream providers te bekijken.[CR]Let op: Veetle dient te zijn geinstalleerd.</description>
-		<disclaimer>All Credits to the all the stream providers!</disclaimer>
+		<description lang="nl">Met deze addon is het mogelijk om streams van Nederlandse stream providers te bekijken.[CR]Let op: Veetle dient te zijn geinstalleerd.</description>
+		<disclaimer>Credits to all the stream providers!</disclaimer>
 		<language>nl</language>
 		<platform>all</platform>
 	</extension>
